--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tetris</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js" type="module"></script>
   </head>
   <body>
     <h1 class="game-title">TETRIS</h1>
